New design, added button

--- a/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
+++ b/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
@@ -1,25 +1,214 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Hungry_Yeti" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="pXR-1b-YLO"/>
+                        <viewControllerLayoutGuide type="bottom" id="snO-C0-9i3"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find me " lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gY1-qh-AhO">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="362" id="Kns-Wp-Ori"/>
+                                    <constraint firstAttribute="height" constant="76" id="RkA-g7-o9e"/>
+                                    <constraint firstAttribute="height" constant="102" id="ShY-pB-J7f"/>
+                                    <constraint firstAttribute="width" constant="187" id="lil-bv-8bV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="45"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Kns-Wp-Ori"/>
+                                        <exclude reference="RkA-g7-o9e"/>
+                                        <exclude reference="ShY-pB-J7f"/>
+                                        <exclude reference="lil-bv-8bV"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="Kns-Wp-Ori"/>
+                                        <exclude reference="RkA-g7-o9e"/>
+                                        <include reference="ShY-pB-J7f"/>
+                                        <include reference="lil-bv-8bV"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a place to eat" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DrB-Ld-KmZ">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="258" id="CgQ-eq-WIs"/>
+                                    <constraint firstAttribute="height" constant="73" id="yvX-fO-DZt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="45"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="CgQ-eq-WIs"/>
+                                        <exclude reference="yvX-fO-DZt"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="CgQ-eq-WIs"/>
+                                        <include reference="yvX-fO-DZt"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9I-gc-Zn5">
+                                <rect key="frame" x="99" y="116" width="177" height="177"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="238" id="8TU-4c-6R3"/>
+                                    <constraint firstAttribute="width" constant="238" id="BU6-ON-DcE"/>
+                                    <constraint firstAttribute="width" constant="238" id="Kh1-zu-Hei"/>
+                                    <constraint firstAttribute="height" constant="238" id="PkP-4B-QDt"/>
+                                    <constraint firstAttribute="width" constant="208" id="YjF-w9-FvE"/>
+                                    <constraint firstAttribute="height" constant="177" id="faA-gs-giO"/>
+                                    <constraint firstAttribute="height" constant="208" id="iRH-V0-hus"/>
+                                    <constraint firstAttribute="height" constant="238" id="m5l-RY-MgN"/>
+                                    <constraint firstAttribute="height" constant="238" id="wjg-c7-7IT"/>
+                                    <constraint firstAttribute="width" constant="177" id="xQl-mb-CgH"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="eatlogo.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="8TU-4c-6R3"/>
+                                        <exclude reference="BU6-ON-DcE"/>
+                                        <exclude reference="Kh1-zu-Hei"/>
+                                        <exclude reference="PkP-4B-QDt"/>
+                                        <exclude reference="YjF-w9-FvE"/>
+                                        <exclude reference="faA-gs-giO"/>
+                                        <exclude reference="iRH-V0-hus"/>
+                                        <exclude reference="m5l-RY-MgN"/>
+                                        <exclude reference="wjg-c7-7IT"/>
+                                        <exclude reference="xQl-mb-CgH"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="faA-gs-giO"/>
+                                        <include reference="xQl-mb-CgH"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="8TU-4c-6R3"/>
+                                        <exclude reference="BU6-ON-DcE"/>
+                                        <exclude reference="Kh1-zu-Hei"/>
+                                        <exclude reference="PkP-4B-QDt"/>
+                                        <include reference="YjF-w9-FvE"/>
+                                        <exclude reference="faA-gs-giO"/>
+                                        <include reference="iRH-V0-hus"/>
+                                        <exclude reference="m5l-RY-MgN"/>
+                                        <exclude reference="wjg-c7-7IT"/>
+                                        <exclude reference="xQl-mb-CgH"/>
+                                    </mask>
+                                </variation>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.51412896594829094" green="0.67615571040523959" blue="0.78797743055555558" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="snO-C0-9i3" firstAttribute="top" secondItem="J9I-gc-Zn5" secondAttribute="bottom" constant="308" id="0FT-a2-5GP"/>
+                            <constraint firstAttribute="centerY" secondItem="gY1-qh-AhO" secondAttribute="centerY" constant="157" id="8cF-VP-ReQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="J9I-gc-Zn5" secondAttribute="trailing" constant="95" id="AcC-d9-puh"/>
+                            <constraint firstAttribute="centerY" secondItem="gY1-qh-AhO" secondAttribute="centerY" constant="132" id="IEc-0c-jb6"/>
+                            <constraint firstAttribute="centerX" secondItem="gY1-qh-AhO" secondAttribute="centerX" constant="-20.5" id="IdH-ld-xzu"/>
+                            <constraint firstItem="J9I-gc-Zn5" firstAttribute="top" secondItem="DrB-Ld-KmZ" secondAttribute="bottom" constant="27" id="OBe-78-rFq"/>
+                            <constraint firstItem="DrB-Ld-KmZ" firstAttribute="top" secondItem="gY1-qh-AhO" secondAttribute="bottom" constant="-31" id="QJt-5D-eOV"/>
+                            <constraint firstAttribute="centerX" secondItem="gY1-qh-AhO" secondAttribute="centerX" constant="-3" id="WsR-Ea-aGJ"/>
+                            <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="-147" id="XCV-ef-KNu"/>
+                            <constraint firstAttribute="centerY" secondItem="DrB-Ld-KmZ" secondAttribute="centerY" constant="100.5" id="XdF-eW-ksa"/>
+                            <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="116" id="fER-kf-nB4"/>
+                            <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" constant="5" id="iKW-Oe-Leh"/>
+                            <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="-67" id="jwf-h9-bZ7"/>
+                            <constraint firstAttribute="centerX" secondItem="DrB-Ld-KmZ" secondAttribute="centerX" id="oFw-Sy-J74"/>
+                            <constraint firstItem="J9I-gc-Zn5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="96" id="tQJ-29-F1Y"/>
+                            <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" id="tgA-6j-lhI"/>
+                            <constraint firstItem="J9I-gc-Zn5" firstAttribute="top" secondItem="pXR-1b-YLO" secondAttribute="bottom" constant="95" id="wHA-Wo-Qv2"/>
+                            <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" id="ys1-hL-e15"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gY1-qh-AhO"/>
+                                <exclude reference="DrB-Ld-KmZ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="8cF-VP-ReQ"/>
+                                <exclude reference="IEc-0c-jb6"/>
+                                <exclude reference="IdH-ld-xzu"/>
+                                <exclude reference="WsR-Ea-aGJ"/>
+                                <exclude reference="QJt-5D-eOV"/>
+                                <exclude reference="XdF-eW-ksa"/>
+                                <exclude reference="oFw-Sy-J74"/>
+                                <exclude reference="AcC-d9-puh"/>
+                                <exclude reference="OBe-78-rFq"/>
+                                <exclude reference="XCV-ef-KNu"/>
+                                <exclude reference="fER-kf-nB4"/>
+                                <exclude reference="iKW-Oe-Leh"/>
+                                <exclude reference="jwf-h9-bZ7"/>
+                                <exclude reference="tQJ-29-F1Y"/>
+                                <exclude reference="tgA-6j-lhI"/>
+                                <exclude reference="wHA-Wo-Qv2"/>
+                                <exclude reference="ys1-hL-e15"/>
+                                <exclude reference="0FT-a2-5GP"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="AcC-d9-puh"/>
+                                <include reference="tQJ-29-F1Y"/>
+                                <include reference="wHA-Wo-Qv2"/>
+                                <include reference="0FT-a2-5GP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gY1-qh-AhO"/>
+                                <include reference="DrB-Ld-KmZ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="8cF-VP-ReQ"/>
+                                <exclude reference="IEc-0c-jb6"/>
+                                <include reference="IdH-ld-xzu"/>
+                                <exclude reference="WsR-Ea-aGJ"/>
+                                <include reference="QJt-5D-eOV"/>
+                                <include reference="XdF-eW-ksa"/>
+                                <include reference="oFw-Sy-J74"/>
+                                <exclude reference="AcC-d9-puh"/>
+                                <include reference="OBe-78-rFq"/>
+                                <exclude reference="XCV-ef-KNu"/>
+                                <exclude reference="fER-kf-nB4"/>
+                                <include reference="iKW-Oe-Leh"/>
+                                <include reference="jwf-h9-bZ7"/>
+                                <exclude reference="tQJ-29-F1Y"/>
+                                <exclude reference="tgA-6j-lhI"/>
+                                <exclude reference="wHA-Wo-Qv2"/>
+                                <exclude reference="ys1-hL-e15"/>
+                                <exclude reference="0FT-a2-5GP"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="459" y="406.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="eatlogo.png" width="1093" height="1093"/>
+    </resources>
 </document>
