finished first view controller

--- a/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
+++ b/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -67,7 +67,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9I-gc-Zn5">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9I-gc-Zn5">
                                 <rect key="frame" x="99" y="116" width="177" height="177"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="238" id="8TU-4c-6R3"/>
@@ -118,11 +118,34 @@
                                         <exclude reference="xQl-mb-CgH"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <segue destination="e41-zn-dto" kind="show" id="3hj-WO-Anr"/>
+                                </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.png" translatesAutoresizingMaskIntoConstraints="NO" id="eI8-4N-8QP">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="lci-Fr-WFI"/>
+                                    <constraint firstAttribute="height" constant="38" id="nJR-er-6Ag"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="lci-Fr-WFI"/>
+                                        <exclude reference="nJR-er-6Ag"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="lci-Fr-WFI"/>
+                                        <include reference="nJR-er-6Ag"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.51412896594829094" green="0.67615571040523959" blue="0.78797743055555558" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="snO-C0-9i3" firstAttribute="top" secondItem="J9I-gc-Zn5" secondAttribute="bottom" constant="308" id="0FT-a2-5GP"/>
+                            <constraint firstAttribute="centerX" secondItem="eI8-4N-8QP" secondAttribute="centerX" constant="4.5" id="6p3-TE-oT8"/>
                             <constraint firstAttribute="centerY" secondItem="gY1-qh-AhO" secondAttribute="centerY" constant="157" id="8cF-VP-ReQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="J9I-gc-Zn5" secondAttribute="trailing" constant="95" id="AcC-d9-puh"/>
                             <constraint firstAttribute="centerY" secondItem="gY1-qh-AhO" secondAttribute="centerY" constant="132" id="IEc-0c-jb6"/>
@@ -135,6 +158,7 @@
                             <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="116" id="fER-kf-nB4"/>
                             <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" constant="5" id="iKW-Oe-Leh"/>
                             <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="-67" id="jwf-h9-bZ7"/>
+                            <constraint firstAttribute="centerY" secondItem="eI8-4N-8QP" secondAttribute="centerY" constant="49" id="m8k-Hw-l1e"/>
                             <constraint firstAttribute="centerX" secondItem="DrB-Ld-KmZ" secondAttribute="centerX" id="oFw-Sy-J74"/>
                             <constraint firstItem="J9I-gc-Zn5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="96" id="tQJ-29-F1Y"/>
                             <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" id="tgA-6j-lhI"/>
@@ -145,6 +169,7 @@
                             <mask key="subviews">
                                 <exclude reference="gY1-qh-AhO"/>
                                 <exclude reference="DrB-Ld-KmZ"/>
+                                <exclude reference="eI8-4N-8QP"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="8cF-VP-ReQ"/>
@@ -164,6 +189,8 @@
                                 <exclude reference="tgA-6j-lhI"/>
                                 <exclude reference="wHA-Wo-Qv2"/>
                                 <exclude reference="ys1-hL-e15"/>
+                                <exclude reference="6p3-TE-oT8"/>
+                                <exclude reference="m8k-Hw-l1e"/>
                                 <exclude reference="0FT-a2-5GP"/>
                             </mask>
                         </variation>
@@ -179,6 +206,7 @@
                             <mask key="subviews">
                                 <include reference="gY1-qh-AhO"/>
                                 <include reference="DrB-Ld-KmZ"/>
+                                <include reference="eI8-4N-8QP"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="8cF-VP-ReQ"/>
@@ -198,6 +226,8 @@
                                 <exclude reference="tgA-6j-lhI"/>
                                 <exclude reference="wHA-Wo-Qv2"/>
                                 <exclude reference="ys1-hL-e15"/>
+                                <include reference="6p3-TE-oT8"/>
+                                <include reference="m8k-Hw-l1e"/>
                                 <exclude reference="0FT-a2-5GP"/>
                             </mask>
                         </variation>
@@ -207,8 +237,27 @@
             </objects>
             <point key="canvasLocation" x="459" y="406.5"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="VpF-Nz-UKy">
+            <objects>
+                <viewController id="e41-zn-dto" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GhA-nb-OCW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wa6-qF-kbK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ej3-jl-SiY">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Fsk-gB-NpB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dw9-Hu-Rlu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1293" y="415.5"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="arrow.png" width="300" height="300"/>
         <image name="eatlogo.png" width="1093" height="1093"/>
     </resources>
 </document>
